# splendor

./: CMakeLists.txt  build.sh
src/: main.cpp
src/agent/: agent_ConsolePlayer.hpp  agent_MonteCarloTreeSearch.cpp  agent_MonteCarloTreeSearch.hpp  agent_PrunedRandom.cpp  agent_PrunedRandom.hpp  agent_Random.hpp  agent_SmartRollout.cpp  agent_SmartRollout.hpp
src/engine/: engine_DevelopmentCard.cpp  engine_DevelopmentCard.hpp  engine_GameState.cpp  engine_GameState.hpp  engine_Gemset.hpp  engine_IAgent.hpp  engine_IView.hpp  engine_Move.hpp  engine_NobleCard.cpp  engine_NobleCard.hpp  engine_Player.cpp  engine_Player.hpp  engine_Runner.cpp  engine_Runner.hpp
src/test/: test_Collect.cpp  test_Collect.hpp  test_Episode.hpp  test_IAgentFactory.hpp
src/util/: util_Format.cpp  util_Format.hpp  util_General.hpp  util_TimeStamp.hpp
src/view/: view_Text.hpp
